Initial readme structure

--- a/QuickPOE/QuickPOE.csproj
+++ b/QuickPOE/QuickPOE.csproj
@@ -51,7 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API.cs" />
-    <Compile Include="Example.cs" />
+    <Compile Include="Example\Example.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublicStash\Stash\Items\AbstractItem.cs" />
