--- a/PublicStashExample/PublicStashExample.csproj
+++ b/PublicStashExample/PublicStashExample.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Example\Example.cs" />
+    <Compile Include="Example\Trade\Currency.cs" />
     <Compile Include="Example\Trade\PoeTrader.cs" />
     <Compile Include="Example\Trade\Price.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
