--- a/PublicStash/PublicStash.nuspec
+++ b/PublicStash/PublicStash.nuspec
@@ -2,14 +2,14 @@
 <package >
   <metadata>
     <id>CSharpPoE.PublicStash</id>
-    <version>0.0.6</version>
+    <version>0.0.9</version>
     <title>CSharpPoe.PublicStash</title>
     <authors>Sebastian de Rzewuski</authors>
     <owners>Sebastian de Rzewuski</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>C# Framework to work with Path of Exile's public API</description>
-    <releaseNotes>Updated Item.</releaseNotes>
-    <copyright>Copyright 2017</copyright>
+    <releaseNotes>Updated the data model to use path of exiles own categorization</releaseNotes>
+    <copyright>Copyright 2018</copyright>
     <tags>PathOfExile Api PublicStash</tags>
   </metadata>
 </package>
