--- a/PublicStashExample/PublicStashExample.csproj
+++ b/PublicStashExample/PublicStashExample.csproj
@@ -35,8 +35,8 @@
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="PublicStash, Version=1.0.0.5, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CSharpPoE.PublicStash.0.0.6\lib\net461\PublicStash.dll</HintPath>
+    <Reference Include="PathOfExile, Version=1.0.0.9, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\CSharpPoE.PublicStash.0.0.9\lib\net461\PathOfExile.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
