--- a/PublicStash/PublicStash.nuspec
+++ b/PublicStash/PublicStash.nuspec
@@ -2,13 +2,13 @@
 <package >
   <metadata>
     <id>CSharpPoE.PublicStash</id>
-    <version>0.0.9</version>
+    <version>0.0.13</version>
     <title>CSharpPoe.PublicStash</title>
     <authors>Sebastian de Rzewuski</authors>
     <owners>Sebastian de Rzewuski</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>C# Framework to work with Path of Exile's public stash API</description>
-    <releaseNotes>Updated the data model to use path of exiles own categorization</releaseNotes>
+    <releaseNotes>Updated the data model to mirror the new view model from poe.</releaseNotes>
     <copyright>Copyright 2018</copyright>
     <tags>PathOfExile Api PublicStash</tags>
   </metadata>
