Update of model

--- a/PublicStash/PublicStash.csproj
+++ b/PublicStash/PublicStash.csproj
@@ -56,71 +56,98 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Items\Accessories\Accessory.cs" />
-    <Compile Include="Model\Items\Accessories\SocketableAccessory.cs" />
-    <Compile Include="Model\Items\Beast\Beast.cs" />
+    <Compile Include="Model\Items\Currencies\Breach\Splinter.cs" />
+    <Compile Include="Model\Items\Currencies\Delve\Fossil.cs" />
+    <Compile Include="Model\Items\Currencies\Delve\Resonator.cs" />
+    <Compile Include="Model\Items\Currencies\Essence\Essence.cs" />
+    <Compile Include="Model\Items\Helpers\Builder\TwoHandedBuilder.cs" />
+    <Compile Include="Model\Items\Helpers\Builder\OneHandedBuilder.cs" />
+    <Compile Include="Model\Items\Helpers\Builder\WeaponBuilder.cs" />
+    <Compile Include="Model\Items\Helpers\Converters\SocketableConverter.cs" />
+    <Compile Include="Model\Items\Helpers\Parser\OneHandedParser.cs" />
+    <Compile Include="Model\Items\Helpers\Parser\TwoHandedParser.cs" />
+    <Compile Include="Model\Items\Helpers\Parser\WeaponParser.cs" />
+    <Compile Include="Model\Items\old\Accessories\Accessory.cs" />
+    <Compile Include="Model\Items\old\Accessories\SocketableAccessory.cs" />
+    <Compile Include="Model\Items\old\Beast\Beast.cs" />
     <Compile Include="Model\Items\Card\Cards.cs" />
-    <Compile Include="Model\Items\Currency\Orbs.cs" />
-    <Compile Include="Model\Items\Currency\Blessings.cs" />
-    <Compile Include="Model\Items\Currency\Prophecies.cs" />
+    <Compile Include="Model\Items\Currencies\Breach\Blessings.cs" />
+    <Compile Include="Model\Items\Currencies\Prophecies.cs" />
     <Compile Include="Model\Items\Helpers\Builder\CardBuilder.cs" />
     <Compile Include="Model\Items\Helpers\Builder\CurrencyBuilder.cs" />
     <Compile Include="Model\Items\Helpers\Builder\UnspecifiedItemBuilder.cs" />
     <Compile Include="Model\Items\Helpers\interface\IBuilder.cs" />
     <Compile Include="Model\Items\Helpers\interface\IConstructor.cs" />
     <Compile Include="Model\Items\Helpers\interface\IParser.cs" />
-    <Compile Include="Model\Items\Helpers\ItemConstructor.cs" />
-    <Compile Include="Model\Items\Helpers\MyAttributes.cs" />
+    <Compile Include="Model\Items\Helpers\Constructor\ItemConstructor.cs" />
+    <Compile Include="Model\Items\Helpers\IndexingAttributes.cs" />
     <Compile Include="Model\Items\Helpers\Parser\CardParser.cs" />
     <Compile Include="Model\Items\Helpers\Parser\CurrencyParser.cs" />
     <Compile Include="Model\Items\Helpers\Parser\JsonParser.cs" />
+    <Compile Include="Model\Items\Socketable.cs" />
+    <Compile Include="Model\Items\Weapons\OneHanded\Axe\Axe.cs" />
+    <Compile Include="Model\Items\Weapons\OneHanded\Claw\Claw.cs" />
+    <Compile Include="Model\Items\Weapons\OneHanded\Dagger\Dagger.cs" />
+    <Compile Include="Model\Items\Weapons\OneHanded\Mace\Mace.cs" />
+    <Compile Include="Model\Items\Weapons\OneHanded\Sceptre\Sceptre.cs" />
+    <Compile Include="Model\Items\Weapons\OneHanded\OneHandedWeapon.cs" />
+    <Compile Include="Model\Items\Weapons\OneHanded\Sword\Sword.cs" />
+    <Compile Include="Model\Items\Weapons\OneHanded\ThrustingSword\ThrustingSword.cs" />
+    <Compile Include="Model\Items\Weapons\OneHanded\Wand\Wand.cs" />
+    <Compile Include="Model\Items\Weapons\TwoHanded\Axe\Axe.cs" />
+    <Compile Include="Model\Items\Weapons\TwoHanded\Bow\Bow.cs" />
+    <Compile Include="Model\Items\Weapons\TwoHanded\Mace\Mace.cs" />
+    <Compile Include="Model\Items\Weapons\TwoHanded\Staff\Staff.cs" />
+    <Compile Include="Model\Items\Weapons\TwoHanded\Swords\Sword.cs" />
+    <Compile Include="Model\Items\Weapons\TwoHanded\TwoHandedWeapon.cs" />
+    <Compile Include="Model\Items\Weapons\Weapon.cs" />
     <Compile Include="PublicStashAPI.cs" />
-    <Compile Include="Model\Items\Currency\old\Piece.cs" />
+    <Compile Include="Model\Items\Currencies\old\Piece.cs" />
     <Compile Include="Model\Items\SockatableConverter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Items\Item.cs" />
-    <Compile Include="Model\Items\Armour\Armour.cs" />
-    <Compile Include="Model\Items\Armour\Chest.cs" />
-    <Compile Include="Model\Items\Armour\Boots.cs" />
-    <Compile Include="Model\Items\Armour\Gloves.cs" />
-    <Compile Include="Model\Items\Armour\Helmet.cs" />
-    <Compile Include="Model\Items\Armour\Shield.cs" />
+    <Compile Include="Model\Items\old\Armour\Armour.cs" />
+    <Compile Include="Model\Items\old\Armour\Chest.cs" />
+    <Compile Include="Model\Items\old\Armour\Boots.cs" />
+    <Compile Include="Model\Items\old\Armour\Gloves.cs" />
+    <Compile Include="Model\Items\old\Armour\Helmet.cs" />
+    <Compile Include="Model\Items\old\Armour\Shield.cs" />
     <Compile Include="Model\Items\UnspecifiedItem.cs" />
-    <Compile Include="Model\Items\Flask\Flask.cs" />
-    <Compile Include="Model\Items\Gem\Gem.cs" />
-    <Compile Include="Model\Items\ItemConverter.cs" />
-    <Compile Include="Model\Items\Accessories\Amulet.cs" />
-    <Compile Include="Model\Items\Accessories\Belt.cs" />
-    <Compile Include="Model\Items\Accessories\Ring.cs" />
-    <Compile Include="Model\Items\Jewel\Jewel.cs" />
-    <Compile Include="Model\Items\Jewel\AbyssJewel.cs" />
-    <Compile Include="Model\Items\Currency\old\Blessing.cs" />
-    <Compile Include="Model\Items\Map\Breachstone.cs" />
-    <Compile Include="Model\Items\Currency\old\Essence.cs" />
-    <Compile Include="Model\Items\Currency\old\AncientReliquaryKey.cs" />
-    <Compile Include="Model\Items\Map\Leaguestone.cs" />
-    <Compile Include="Model\Items\Currency\old\Prophecy.cs" />
-    <Compile Include="Model\Items\Accessories\Talisman.cs" />
-    <Compile Include="Model\Items\Map\Fragment.cs" />
-    <Compile Include="Model\Items\Map\Map.cs" />
+    <Compile Include="Model\Items\old\Flask\Flask.cs" />
+    <Compile Include="Model\Items\old\Gem\Gem.cs" />
+    <Compile Include="Model\Items\Helpers\Converters\ItemConverter.cs" />
+    <Compile Include="Model\Items\old\Accessories\Amulet.cs" />
+    <Compile Include="Model\Items\old\Accessories\Belt.cs" />
+    <Compile Include="Model\Items\old\Accessories\Ring.cs" />
+    <Compile Include="Model\Items\old\Jewel\Jewel.cs" />
+    <Compile Include="Model\Items\old\Jewel\AbyssJewel.cs" />
+    <Compile Include="Model\Items\Currencies\old\Blessing.cs" />
+    <Compile Include="Model\Items\old\Map\Breachstone.cs" />
+    <Compile Include="Model\Items\Currencies\old\Essence.cs" />
+    <Compile Include="Model\Items\Currencies\old\AncientReliquaryKey.cs" />
+    <Compile Include="Model\Items\old\Map\Leaguestone.cs" />
+    <Compile Include="Model\Items\Currencies\old\Prophecy.cs" />
+    <Compile Include="Model\Items\old\Accessories\Talisman.cs" />
+    <Compile Include="Model\Items\old\Map\Fragment.cs" />
+    <Compile Include="Model\Items\old\Map\Map.cs" />
     <Compile Include="Model\Items\SocketableItem.cs" />
-    <Compile Include="Model\Items\Currency\Currency.cs" />
-    <Compile Include="Model\Items\Weapon\Bow.cs" />
-    <Compile Include="Model\Items\Weapon\Claw.cs" />
-    <Compile Include="Model\Items\Weapon\Dagger.cs" />
-    <Compile Include="Model\Items\Weapon\FishingRod.cs" />
-    <Compile Include="Model\Items\Weapon\OneHandedAxe.cs" />
-    <Compile Include="Model\Items\Weapon\OneHandedMace.cs" />
-    <Compile Include="Model\Items\Weapon\OneHandedSword.cs" />
-    <Compile Include="Model\Items\Armour\Quiver.cs" />
-    <Compile Include="Model\Items\Weapon\Sceptre.cs" />
-    <Compile Include="Model\Items\Weapon\Staff.cs" />
-    <Compile Include="Model\Items\Weapon\TwoHandedAxe.cs" />
-    <Compile Include="Model\Items\Weapon\TwoHandedMace.cs" />
-    <Compile Include="Model\Items\Weapon\TwoHandedSword.cs" />
-    <Compile Include="Model\Items\Weapon\Wand.cs" />
-    <Compile Include="Model\Items\Weapon\Weapon.cs" />
+    <Compile Include="Model\Items\Currencies\Currency.cs" />
+    <Compile Include="Model\Items\old\Weapon\Bow.cs" />
+    <Compile Include="Model\Items\old\Weapon\Claw.cs" />
+    <Compile Include="Model\Items\old\Weapon\Dagger.cs" />
+    <Compile Include="Model\Items\old\Weapon\FishingRod.cs" />
+    <Compile Include="Model\Items\old\Weapon\OneHandedAxe.cs" />
+    <Compile Include="Model\Items\old\Weapon\OneHandedMace.cs" />
+    <Compile Include="Model\Items\old\Weapon\OneHandedSword.cs" />
+    <Compile Include="Model\Items\old\Armour\Quiver.cs" />
+    <Compile Include="Model\Items\old\Weapon\Sceptre.cs" />
+    <Compile Include="Model\Items\old\Weapon\Staff.cs" />
+    <Compile Include="Model\Items\old\Weapon\TwoHandedAxe.cs" />
+    <Compile Include="Model\Items\old\Weapon\TwoHandedMace.cs" />
+    <Compile Include="Model\Items\old\Weapon\TwoHandedSword.cs" />
+    <Compile Include="Model\Items\old\Weapon\Wand.cs" />
+    <Compile Include="Model\Items\old\Weapon\Weapon.cs" />
     <Compile Include="Model\PublicStash.cs" />
     <Compile Include="Model\Stash.cs" />
   </ItemGroup>
@@ -129,7 +156,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Model\Items\Armour\old\" />
+    <Folder Include="Model\Items\old\Armour\old\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
